<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.softwaremagico</groupId>
    <artifactId>kendo-tournament-backend</artifactId>
    <version>2.17.0</version>
    <name>Kendo Tournament Manager</name>
    <packaging>pom</packaging>

    <organization>
        <name>Softwaremagico</name>
        <url>https://github.com/softwaremagico/KendoTournamentManager</url>
    </organization>


    <modules>
        <module>kendo-tournament-logger</module>
        <module>kendo-tournament-persistence</module>
        <module>kendo-tournament-core</module>
        <module>kendo-tournament-pdf</module>
        <module>kendo-tournament-rest</module>
    </modules>

    <scm>
        <connection>scm:git:ssh://git@github.com/softwaremagico/KendoTournamentManager.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/softwaremagico/KendoTournamentManager.git
        </developerConnection>
        <url>https://github.com/softwaremagico/KendoTournamentManager.git</url>
        <tag>kendo-tournament-2.0.0</tag>
    </scm>

    <issueManagement>
        <system>Github</system>
        <url>https://github.com/softwaremagico/KendoTournamentManager/issues</url>
    </issueManagement>

    <ciManagement>
        <system>Travis</system>
        <url>https://travis-ci.org/softwaremagico/KendoTournamentManager</url>
    </ciManagement>

    <developers>
        <developer>
            <id>jhortelano</id>
            <name>Jorge Hortelano</name>
            <email>softwaremagico@gmail.com</email>
            <roles>
                <role>Project-Administrator</role>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>GNU GPL v3</name>
            <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub OWNER Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/softwaremagico/KendoTournamentManager</url>
        </repository>
    </distributionManagement>


    <properties>
        <main.basedir>${project.basedir}</main.basedir>
        <java.version>17</java.version>
        <sonar.organization>softwaremagico</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <checkstyle.version>3.3.0</checkstyle.version>
        <spotbugs.version>4.7.3.4</spotbugs.version>
        <org.testng.version>7.8.0</org.testng.version>
        <springdoc-openapi.version>2.1.0</springdoc-openapi.version>
        <springdoc.version>1.7.0</springdoc.version>
        <license-maven-plugin.version>2.2.0</license-maven-plugin.version>
        <modelmapper.version>2.3.9</modelmapper.version>
        <maven-scm-provider-gitexe.version>1.9.2</maven-scm-provider-gitexe.version>
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
        <maven-surefire-plugin.version>3.1.0</maven-surefire-plugin.version>
        <javax-interceptor.version>1.2.2</javax-interceptor.version>
        <jjwt.version>0.9.1</jjwt.version>
        <openpdf.version>1.3.30</openpdf.version>
        <mysql.version>8.0.33</mysql.version>
        <hibernate-jcache.version>6.2.0.CR2</hibernate-jcache.version>
        <ehcache.version>3.10.8</ehcache.version>
        <jaxb-api.version>2.3.1</jaxb-api.version>
        <jaxb-core.version>2.3.0.1</jaxb-core.version>
        <jaxb-impl.version>2.3.1</jaxb-impl.version>
        <javassist.version>3.25.0-GA</javassist.version>
        <qr-code.version>0.4.0</qr-code.version>
        <apache-batik.version>1.17</apache-batik.version>
    </properties>

    <build>
        <finalName>kendo-tournament</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.scm</groupId>
                        <artifactId>maven-scm-provider-gitexe</artifactId>
                        <version>${maven-scm-provider-gitexe.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <checkModificationExcludes>
                        <checkModificationExclude>pom.xml</checkModificationExclude>
                    </checkModificationExcludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle.version}</version>
                <configuration>
                    <configLocation>${main.basedir}/checkstyle.xml</configLocation>
                    <suppressionsLocation>${main.basedir}/checkstyle-suppressions.xml</suppressionsLocation>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>${spotbugs.version}</version>
                <configuration>
                    <!-- Enables analysis which takes more memory but finds more bugs.
                        If you run out of memory, changes the value of the effort element to 'Low'. -->
                    <effort>Max</effort>
                    <!-- Build fail if problems are found -->
                    <failOnError>true</failOnError>
                    <!-- Reports all bugs (values are max, medium and max) -->
                    <threshold>High</threshold>
                </configuration>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${license-maven-plugin.version}</version>
                <configuration>
                    <inceptionYear>2021</inceptionYear>
                    <licenseName>agpl_v3</licenseName>
                    <excludes>
                        <exclude>**/*.properties</exclude>
                        <exclude>**/*.xml</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>download-licenses</id>
                        <goals>
                            <goal>download-licenses</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>first</id>
                        <goals>
                            <goal>update-file-header</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
